--- a/sass/config-partials/_drupalisms.sass
+++ b/sass/config-partials/_drupalisms.sass
@@ -39,8 +39,10 @@ ul.tabs
 ul.pager
 
 // Tags
-.tags a
-  padding-left: 0.2em
+.field-name-field-tags
+  margin-bottom: 1rem
+  a
+    padding-left: 0.5em
 
 // Inline labels
 .label-inline
