--- a/sass/config-partials/_elements.sass
+++ b/sass/config-partials/_elements.sass
@@ -98,4 +98,6 @@ blockquote
 
 .node-article.view-mode-full .content
   background-color: $white
-  padding: 0.5rem
+  padding: 1rem
+  p
+    margin-bottom: 1rem
